# ripser-plusplus

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  install.sh  install_simple.sh  install_w_python_bindings.sh  ripser++.cu  ripser.cpp  run.sh  setup.py
examples/: Vicsek300_300_of_300.lower_distance_matrix
include/profiling/: stopwatch.h
python/: CMakeLists.txt  README.md  setup.py
python/ripser_plusplus_python/: Ripser_plusplus_Converter.py  __init__.py
python/ripser_plusplus_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/working_directory/: README.md  dictionary_test.py  examples.py  run_ripser++_w_CLI.py  run_ripser++_w_matrix.py  sp_tests.py  sp_verification.py  testmemory.py
ripserplusplus/: CMakeLists.txt  Ripser_plusplus_Converter.py  __init__.py  install_simple.sh  ripser++.cu
ripserplusplus/examples/: celegans.distance_matrix
ripserplusplus/include/phmap_interface/: phmap_interface.cpp  phmap_interface.h
ripserplusplus/python_examples/: README.md  dictionary_test.py  examples.py  run_ripser++_w_CLI.py  run_ripser++_w_matrix.py  sp_test.sparse_matrix  sp_tests.py  sp_verification.py  testmemory.py
ripserplusplus/testing/: run.sh
ripserplusplus/testing/ripser++_testing_expected_barcodes/: HIV.gpu.barcodes  Vicsek300_300_of_300.gpu.barcodes  celegans.gpu.barcodes  dragon1000.gpu.barcodes  o3_4096.gpu.barcodes  sphere_3_192.gpu.barcodes
testing/ripser++_testing_expected_barcodes/: HIV.gpu.barcodes  Vicsek300_300_of_300.gpu.barcodes  o3_4096.gpu.barcodes
